[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/King.gd" type="Script" id=1]
[ext_resource path="res://Sprites/King/King_default_sheet.png" type="Texture" id=2]
[ext_resource path="res://Fonts/debugFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Audio/King/Land/king_jump.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 11.5 )

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 46.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 15, 23, 38, 38.6, 39.2, 40.2, 40.8, 41.8, 42.4, 43.4, 44, 45, 45.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 12, 0, 9, 10, 11, 10, 9, 10, 11, 10, 9, 10, 11 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "air_collide"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=8]
resource_name = "falling"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=5]
resource_name = "jump_release"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=6]
resource_name = "jump_start"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=9]
resource_name = "splat"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}

[sub_resource type="Animation" id=3]
resource_name = "walk"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 2 ]
}

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 11, 10.5 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 10, 1 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 10, 0.875 )

[node name="King" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 0
texture = ExtResource( 2 )
offset = Vector2( -1, 0 )
hframes = 4
vframes = 4
frame = 2
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 4.5 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
playback_speed = 2.0
anims/Idle = SubResource( 2 )
anims/RESET = SubResource( 4 )
anims/air_collide = SubResource( 7 )
anims/falling = SubResource( 8 )
anims/jump_release = SubResource( 5 )
anims/jump_start = SubResource( 6 )
anims/splat = SubResource( 9 )
anims/walk = SubResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="SplatTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="IdleTimer" type="Timer" parent="."]

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -30.0
margin_top = -25.0
margin_right = 29.0
margin_bottom = -10.0
custom_fonts/font = ExtResource( 3 )
text = "debug"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BounceArea" type="Area2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BounceArea"]
visible = false
position = Vector2( 0, 4.5 )
shape = SubResource( 11 )

[node name="HeadBounceArea" type="Area2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="HeadBounceArea"]
visible = false
position = Vector2( 0, -7 )
shape = SubResource( 12 )

[node name="GroundedArea" type="Area2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroundedArea"]
visible = false
position = Vector2( 0, 15.875 )
shape = SubResource( 13 )

[node name="Line2D" type="Line2D" parent="."]
visible = false
z_index = 2
points = PoolVector2Array( 0, 0, 20, 0 )
width = 1.0
default_color = Color( 1, 0, 0, 1 )

[connection signal="timeout" from="SplatTimer" to="." method="_on_SplatTimer_timeout"]
